<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="dlg_recent_remove_title">履歴の削除</string>
	<string name="dlg_recent_remove_message">"%s" を削除しますか?</string>
    <string name="menu_recent_clear">履歴をクリア</string>
    <string name="main_pref">地域変更</string>
    <string name="menu_help">ヘルプ</string>
    <string name="area_select_search">検索</string>
    <string name="area_select_search_label">郵便番号または地名</string>
    <string name="app_name">ピンポイント天気</string>
    <string name="mainTitleFormat">%1$s の天気</string>
   	<string name="weekly_text">週間天気</string>
	<string name="menu_reload">最新の情報に更新</string>
	<string name="menu_pref">地域を変更</string>
	<string name="retry">再試行</string>
	<string name="display_settings">表示設定</string>
	<string name="show_weather_icon">天気アイコン</string>
	<string name="show_weather_icon_label">天気テキスト</string>
	<string name="show_temperature">温度</string>
	<string name="show_humidity">湿度</string>
	<string name="show_precipitation">降水量</string>
	<string name="show_wind">風向き・風速</string>
	<string name="close">閉じる</string>
	<string name="done">完了</string>
	<string name="settings">設定</string>
	<string name="widgetSetting">ウィジェットの設定</string>
	<string name="backgroundTransparency">背景の透明度</string>
	<string name="theme">テーマ</string>
	<string name="themeDefault">デフォルト</string>
	<string name="theme1">テーマ1(シンプル)</string>
	<string name="preview">プレビュー</string>

	<string name="reload_error">データの取得ができませんでした。</string>
	<string name="using_cache">データの取得が失敗したため、前回の情報を表示します。</string>
	<string name="area_select_search_empty">郵便番号、または地域名を入力して検索してください。</string>
	<string name="area_select_title">地域設定</string>
	<string name="area_select_result_empty">「%1$s」は見つかりませんでした。</string>
	<string name="main_open_browser">Yahoo!天気情報</string>
	<string name="help_title">ピンポイント天気 - ヘルプ</string>
	<string name="dark_theme">ダークテーマ</string>
	<string name="updateTimeFmt">%s 更新</string>
	<string name="updateErrorTimeFmt">%s 更新失敗</string>

	<string name="widgetUpdateService">ウィジェット更新サービス</string>
</resources>
