<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/widgetSetting"
                android:textAppearance="?android:textAppearanceSmall"/>

        <TextView
                android:visibility="gone"
                android:text="@string/preview"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <FrameLayout
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/widgetPreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/backgroundTransparency"
                android:textAppearance="?android:textAppearanceLarge"/>

        <SeekBar
                android:id="@+id/backgroundTransparency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:minHeight="48dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/theme"
                android:textAppearance="?android:textAppearanceLarge"/>

        <RadioGroup
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioButton
                    android:id="@+id/darkTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/themeDefault"/>

            <RadioButton
                    android:id="@+id/theme1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme1"/>
        </RadioGroup>

    </LinearLayout>
</ScrollView>