<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="@dimen/marginHeight"
        android:paddingRight="@dimen/marginWidth"
        android:textSize="12sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fadingEdge="none"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/marginWidth"
            android:paddingTop="@dimen/marginHeight"
            android:paddingRight="@dimen/marginWidth"
            android:paddingBottom="@dimen/marginHeight">

            <include layout="@layout/main_table"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dip"
                android:orientation="horizontal"
                tools:context=".MainActivity">

                <Button
                    android:id="@+id/open_browser"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onClickOpenBrowser"
                    android:text="@string/main_open_browser"/>

                <Button
                    android:id="@+id/area_select"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="onClickChangeArea"
                    android:text="@string/main_pref"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@android:id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/errorGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/errorMessageBackgroundColor"
        android:gravity="center"
        android:minWidth="300dip"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:text="@string/reload_error"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/errorMessageTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="48dip"
            android:onClick="onClickErrorMessage"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:text="@string/retry"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/accentColor"/>
    </LinearLayout>
</merge>